# Relia-Queue

./: .env  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  main.py  nose2.cfg  package-lock.json  printer.py  publish.sh  pyproject.toml  router.py  schemas.py  simulation_results.xlsx  surroundings.py  test.py  uttest.py  uvicorn_service.py
options/: main.py
options/option1/: data.json  option1.py
options/option2/: data.json  option2.py
options/option3/: data.json  option3.py
resurse/static/scripts/: block_system_page.js  script.js  smo-over-queue.js  smo_rejection.js
resurse/static/style/: layout.css
resurse/template/: about.j2  block_system_page.html  block_system_page.j2  block_system_page1.html  cfr_refusal_page.j2  cfr_unlimited_page.html  cfr_unlimited_page.j2  footer.html  footer.j2  header.html  header.j2  index.j2  layout.html  layout.j2  main_page.j2  sjkfds.html  skip_panel.j2
smo_over_queue/: processing.py
smo_rejection/: __init__.py  exception.py  main.py  pdf_export.py  processing.py  simulation.py  utils.py  xml_export.py
solution/: ex1.py  main.py  models.py  processing.py  simulation.py  smo_over_queue.py  smo_rejection.py  smo_rejection_uttest.py  utils.py
solution/components/: block.py  element.py
solution/date/: block_dict.py  element_dict.py  simulation.py
solution/smo_over_queue/: exceptions.py  models.py  processing.py  simulation.py  utils.py
tests/: error.py  exporter.py  printer.py  pytest.py  test_.py
