[tool.poetry]
name = "options-selenium"
version = "0.1.0"
description = "Имитационное моделирование. Системы массового обслуживания."
authors = ["triks <trik0001000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"